--- a/frontend/src/Component/Header/Header.module.css
+++ b/frontend/src/Component/Header/Header.module.css
@@ -57,6 +57,11 @@
     color: #d1d959;
 }
 
+.Link {
+  text-decoration: none;
+  color: #d1d959;
+}
+
 .DivUl ul li:hover {
     cursor: pointer;
     background-color: #403d98;
@@ -66,3 +71,78 @@
   	            inset -2px -2px 10px rgba(255, 255, 255, 0.05),
                 inset 2px 2px 10px rgba(0,0,0,0.5);
 }
+
+/* .dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  } */
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdownNote {
+    display: none;
+    position: absolute;
+    background-color: whitesmoke;
+    min-width: 120px;
+    box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
+ 	            2px 2px 6px rgba(0,0,0,0.8);
+  	            /* inset -2px -2px 10px rgba(255, 255, 255, 0.05),
+                inset 2px 2px 10px rgba(0,0,0,0.5); */
+    z-index: 1;
+    right: -26px;
+    top: 26px;
+    border-radius: 3px;
+  }
+  
+  .dropdownNote a {
+    color: #403d98;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdownNote a:hover {
+    background-color: #ddd;
+    border-radius: 3px;
+    }
+
+    .dropdownUser {
+      display: none;
+      position: absolute;
+      background-color: whitesmoke;
+      min-width: 100px;
+      box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
+                 2px 2px 6px rgba(0,0,0,0.8);
+                  /* inset -2px -2px 10px rgba(255, 255, 255, 0.05),
+                  inset 2px 2px 10px rgba(0,0,0,0.5); */
+      z-index: 1;
+      right: -13px;
+      top: 26px;
+      border-radius: 3px;
+    }
+
+    .dropdownUser p {
+      color: #403d98;
+      padding: 0;
+      margin:0;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+    
+    .dropdownUser p:hover {
+      background-color: #ddd;
+      border-radius: 3px;
+      }
+  
+  .dropdown:hover .dropdownNote {display: block;}
+  
+  .dropdown:hover .dropdownUser {display: block;} 
+  
+  /* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
