--- a/frontend/src/Component/Header/Header.module.css
+++ b/frontend/src/Component/Header/Header.module.css
@@ -31,7 +31,8 @@
     height: 40px;
     border-radius: 3px;
     text-align: center;
-    padding-top: 2px;
+    /* this CENTERS VERTICALLY the TEXT same as HEIGHT */
+    line-height: 40px;
     background-color: #403d98;
     color: #d1d959;
 }
@@ -50,16 +51,23 @@
 .DivUl ul li {
     display: inline-block;
     margin: 0 12px;
-    width: 70px;
-    height: 25px;
+    padding: 0 12px;
+    width: auto;
+    height: 28px;
     text-align: center;
+    line-height: 28px;
     border-radius: 3px;
     color: #d1d959;
+    font-size: 18px;
 }
 
 .Link {
   text-decoration: none;
   color: #d1d959;
+}
+
+.I {
+  margin-right: 5px;
 }
 
 .DivUl ul li:hover {
@@ -89,22 +97,24 @@
     display: none;
     position: absolute;
     background-color: whitesmoke;
-    min-width: 120px;
+    min-width: 130px;
     box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
  	            2px 2px 6px rgba(0,0,0,0.8);
   	            /* inset -2px -2px 10px rgba(255, 255, 255, 0.05),
                 inset 2px 2px 10px rgba(0,0,0,0.5); */
     z-index: 1;
-    right: -26px;
-    top: 26px;
+    right: -23px;
+    top: 28px;
     border-radius: 3px;
   }
   
   .dropdownNote a {
     color: #403d98;
-    padding: 12px 16px;
+    padding: 4px 16px;
     text-decoration: none;
     display: block;
+    font-weight: 600;
+    letter-spacing: 0.2px;
   }
   
   .dropdownNote a:hover {
@@ -122,8 +132,8 @@
                   /* inset -2px -2px 10px rgba(255, 255, 255, 0.05),
                   inset 2px 2px 10px rgba(0,0,0,0.5); */
       z-index: 1;
-      right: -13px;
-      top: 26px;
+      right: -10px;
+      top: 28px;
       border-radius: 3px;
     }
 
@@ -131,9 +141,11 @@
       color: #403d98;
       padding: 0;
       margin:0;
-      padding: 12px 16px;
+      padding: 4px 16px;
       text-decoration: none;
       display: block;
+      font-weight: 600;
+      letter-spacing: 0.2px;
     }
     
     .dropdownUser p:hover {
