--- a/frontend/src/Component/Home/Home.module.css
+++ b/frontend/src/Component/Home/Home.module.css
@@ -29,7 +29,8 @@
 }
 
 .Form {
-    width: 30%;
+    width: 250px;
+    height: 300px;
     border: 1px solid black;
     border-radius: 3px;
     box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
@@ -38,10 +39,11 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 
     padding: 20px 40px 30px;
+    font-weight: 700;
 }
 
 .DivH3 {
@@ -70,6 +72,10 @@
 .DivInputs input {
     width: 100%;
     height: 25px;
+    border-radius: 3px;
+    padding: 0 6px;
+    border: 1px solid #2E2C6D;
+    font-size: 16px;
 }
 
 .PWarning {
@@ -78,7 +84,7 @@
     padding-bottom: 35px;
     margin: 0 auto;
     color: red;
-    display: block;
+    display: none;
 }
 
 .PWarningShow {
@@ -93,12 +99,14 @@
 }
 
 .DivBtn input {
+    
     margin-top: 30px;
     padding: 6px 12px;
     color: #dfe58d;
     background-color: #403d98;
     border: none;
     border-radius: 3px;
+    font-size: 18px;
     font-weight: 700;
     letter-spacing: 1px;
     box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
@@ -106,7 +114,7 @@
 
 }
 
-.Footer {
+/* .Footer {
     width: 100%;
     height: 50px;
     display: flex;
@@ -115,4 +123,4 @@
     align-items: center;
     background-color:#2E2C6D;
     color: #d1d959;
-}
+} */
