--- a/frontend/src/Component/Home/Home.module.css
+++ b/frontend/src/Component/Home/Home.module.css
@@ -1,6 +1,72 @@
 .Header {
     width: 100%;
     height: 70px;
+    background-color:#2E2C6D;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.Header h1 {
+    grid-column: 2/3;
+    margin: 0;
+    padding: 0;
+    letter-spacing: 1px;
+    font-size: 35px;
+    color: #d1d959;
+    padding: 4px 8px;
+    border-radius: 3px;
+    box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
+ 	            2px 2px 6px rgba(0,0,0,0.8);
+}
+
+.DivUser {
+    width: 100%;
+    grid-column: 3/4;
+    display: grid;
+    grid-template-columns: 1fr 1fr 130px;
+    justify-items: center;
+    align-items: center;
+}
+
+.DivUser p {
+    /* display: inline-block; */
+    grid-column: 3/4;
+    /* margin: 0 12px; */
+    /* padding: 0 12px;  */
+    margin-right: 30px;
+    width: 120px;
+    height: 32px;
+    text-align: center;
+    line-height: 32px;
+    border-radius: 3px;
+    color: #d1d959;
+    font-size: 18px;
+}
+
+.I {
+    margin-right: 5px;
+}
+
+.Link {
+    text-decoration: none;
+    color: #d1d959;
+}
+
+.DivUser p:hover {
+    cursor: pointer;
+    background-color: #403d98;
+    color: #d1d959;
+    box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
+ 	            2px 2px 6px rgba(0,0,0,0.8),
+  	            inset -2px -2px 10px rgba(255, 255, 255, 0.05),
+                inset 2px 2px 10px rgba(0,0,0,0.5);
+}
+
+/* .Header {
+    width: 100%;
+    height: 70px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -18,7 +84,7 @@
     border-radius: 3px;
     box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
  	            2px 2px 6px rgba(0,0,0,0.8);
-}
+} */
 
 .DivForm {
     width: 100%;
