--- a/frontend/src/Component/UserProfile/UserProfile.module.css
+++ b/frontend/src/Component/UserProfile/UserProfile.module.css
@@ -1,6 +1,179 @@
 .DivUserProf {
     width: 100%;
     min-height: calc(100vh - 160px);
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
     margin-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.DivH3 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+      
+}
+
+.DivH3 h3 {
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 30px;
+    padding: 0;
+}
+
+
+.DivForm {
+    /* margin-top: 50px; */
+    min-height: calc(100vh - 190px);
+    display: flex;
+    /* justify-content: center; */
+    /* align-items: center; */
+    border: 1px solid black;
+    border-radius: 3px;
+    box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
+                 2px 2px 6px rgba(0,0,0,0.8);
+    background-color: whitesmoke;
+}
+
+
+.Form {
+    width: 260px;
+    /* height: 400px; */
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 40px 30px;
+    font-weight: 700;
+}
+
+
+
+.DivInputs {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.DivInputsPass2 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.DivInputsPass2 label {
+    margin-bottom: 10px;
+}
+
+.DivInputsPass2 input {
+    width: 100%;
+    height: 25px;
+    border-radius: 3px;
+    padding: 0 6px;
+    border: 1px solid #2E2C6D;
+    font-size: 16px;
+}
+
+.DivInputs label {
+    margin-bottom: 10px;
+}
+
+.DivInputs input {
+    width: 100%;
+    height: 25px;
+    border-radius: 3px;
+    padding: 0 6px;
+    border: 1px solid #2E2C6D;
+    font-size: 16px;
+}
+
+.PError {
+    margin: 0;
+    padding-top: 2px;
+    padding-bottom: 35px;
+    margin: 0 auto;
+    color: red;
+    /* display: none; */
+    display: block;
+}
+
+.PErrorShow {
+    display: block;
+}
+
+.PSuccess {
+    margin: 0;
+    padding-top: 2px;
+    padding-bottom: 35px;
+    margin: 0 auto;
+    color: green;
+    display: block;
+    /* display: none; */
+}
+
+.PSuccessShow {
+    display: block;
+}
+
+.UserTaken {
+    padding: 0;
+    padding-top: 10px;
+    margin: 0 auto;
+    color: #403d98;
+    display: block;
+}
+
+.DivBtn {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.DivBtn input {
+    
+    margin-top: 30px;
+    padding: 6px 12px;
+    color: #dfe58d;
+    background-color: #403d98;
+    border: none;
+    border-radius: 3px;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
+                 2px 2px 6px rgba(0,0,0,0.8);
+}
+
+.DivBtn input:hover{
+    cursor: pointer;
+}
+
+.DivDelUser {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80px;
+    margin-top: 40px;
+}
+
+.DivDelUser input {
+    padding: 6px 12px;
+    color: #dfe58d;
+    background-color: #403d98;
+    border: none;
+    border-radius: 3px;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
+                 2px 2px 6px rgba(0,0,0,0.8);
+}
+
+.DivDelUser input:hover{
+    cursor: pointer;
 }
