--- a/frontend/src/Component/Home/Home.module.css
+++ b/frontend/src/Component/Home/Home.module.css
@@ -197,16 +197,15 @@
         width: 100%;
         height: 60px;
         background-color:#2E2C6D;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        justify-items: center;
+        display: flex;
+        justify-content: space-between;
         align-items: center;
     }
     
     .Header h1 {
-        grid-column: 1/2;
         margin: 0;
         padding: 0;
+        margin-left: 20px;
         letter-spacing: 1px;
         font-size: 28px;
         color: #d1d959;
@@ -215,29 +214,30 @@
         box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
                      2px 2px 6px rgba(0,0,0,0.8);
     }
+
+    .DivForm {
+        height: calc(100vh - 150px);
+    }
     
     .DivUser {
-        width: 100%;
-        grid-column: 2/3;
-        display: grid;
-        grid-template-columns: 1fr;
-        justify-items: flex-end;
+        display: flex;
+        justify-content: flex-end;
         align-items: center;
+        width: 50%;
     }
     
     .DivUser p {
         /* display: inline-block; */
-        grid-column: 1/2;
+        /* grid-column: 1/2; */
         /* margin: 0 12px; */
         /* padding: 0 12px;  */
-        margin-right: 30px;
-        width: 120px;
+        /* margin-right: 30px; */
         height: 32px;
         text-align: center;
         line-height: 32px;
         border-radius: 3px;
         color: #d1d959;
-        font-size: 18px;
+        font-size: 16px;
     }
 
 }
