--- a/frontend/src/Component/UserProfile/UserProfile.module.css
+++ b/frontend/src/Component/UserProfile/UserProfile.module.css
@@ -177,3 +177,83 @@
 .DivDelUser input:hover{
     cursor: pointer;
 }
+
+@media (max-width: 805px) {
+
+    .Form {
+        width: 200px;
+        /* height: 400px; */
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 20px 20px;
+        font-weight: 700;
+    }
+
+    .DivBtn input {    
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 638px) {
+
+    .DivForm {
+        /* margin-top: 50px; */
+        min-height: calc(100vh - 190px);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 70%;
+    }
+
+    .Form {
+        width: 60%;
+        /* height: 400px; */
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 20px 20px;
+        font-weight: 700;
+    }
+
+    .Form:last-child {
+        margin-bottom: 20px;
+    }
+
+}
+
+@media (max-width: 500px) {
+
+    .DivUserProf {  
+        margin-top: 100px; 
+    }
+
+    .DivForm {
+        /* margin-top: 50px; */
+        min-height: calc(100vh - 190px);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+    }
+
+    .Form {
+        width: 90%;
+        /* height: 400px; */
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 20px 20px;
+        font-weight: 700;
+    }
+
+
+}
